Update project files: layouts, product renderer, and styles

--- a/index.html
+++ b/index.html
@@ -210,7 +210,6 @@
                                           <button type="button"
                                              class="tp-product-action-btn-2 tp-product-add-cart-btn"><i
                                                 class="fa-solid fa-cart-shopping"></i></button>
-
                                           <button type="button"
                                              class="tp-product-action-btn-2 tp-product-add-to-wishlist-btn"><i
                                                 class="fa-regular fa-heart"></i></button>
@@ -219,7 +218,7 @@
                                  </div>
                                  <div class="tp-product-content-2 pt-15">
                                     <div class="tp-product-tag-2">
-                                       <a href="#">مناسبات</a>
+                                       <a href="#">فاخر</a>
                                     </div>
                                     <h3 class="tp-product-title-2">
                                        <a href="product.html?id=makhour-luxury-1">جلابية القصات الحديثة</a>
@@ -244,7 +243,6 @@
                                           <button type="button"
                                              class="tp-product-action-btn-2 tp-product-add-cart-btn"><i
                                                 class="fa-solid fa-cart-shopping"></i></button>
-
                                           <button type="button"
                                              class="tp-product-action-btn-2 tp-product-add-to-wishlist-btn"><i
                                                 class="fa-regular fa-heart"></i></button>
