--- a/product.html
+++ b/product.html
@@ -223,7 +223,8 @@
                                  <button class="tp-product-details-add-to-cart-btn w-100">إضافة للسلة</button>
                               </div>
                            </div>
-                           <button class="tp-product-details-buy-now-btn w-100">شراء الآن</button>
+                           <a href="checkout.html" class="w-100"><button
+                                 class="tp-product-details-buy-now-btn w-100">شراء الآن</button></a>
                         </div>
 
                      </div>
@@ -251,7 +252,7 @@
                         <div class="swiper-slide">
                            <div class="tp-product-item-2 mb-40">
                               <div class="tp-product-thumb-2 p-relative z-index-1 fix w-img">
-                                 <a href="product.html?id=related-1">
+                                 <a href="product.html?id=1">
                                     <img src="assets/img/products/1.png" alt="">
                                  </a>
                                  <div class="tp-product-badge-hover">
@@ -274,7 +275,7 @@
                                     <a href="#">حرير</a>
                                  </div>
                                  <h3 class="tp-product-title-2">
-                                    <a href="product.html?id=related-1"> مخور حرير </a>
+                                    <a href="product.html?id=1"> مخور حرير </a>
                                  </h3>
                                  <div class="tp-product-price-wrapper-2">
                                     <span class="tp-product-price-2 new-price">300 <span>ر.ق</span></span>
@@ -287,7 +288,7 @@
                         <div class="swiper-slide">
                            <div class="tp-product-item-2 mb-40">
                               <div class="tp-product-thumb-2 p-relative z-index-1 fix w-img">
-                                 <a href="product.html?id=related-2">
+                                 <a href="product.html?id=2">
                                     <img src="assets/img/products/2.png" alt="">
                                  </a>
                                  <div class="tp-product-badge-hover">
@@ -310,7 +311,7 @@
                                     <a href="#">قطن</a>
                                  </div>
                                  <h3 class="tp-product-title-2">
-                                    <a href="product.html?id=related-2">مخور قطن</a>
+                                    <a href="product.html?id=2">مخور قطن</a>
                                  </h3>
                                  <div class="tp-product-price-wrapper-2">
                                     <span class="tp-product-price-2 new-price">250 <span>ر.ق</span></span>
@@ -323,7 +324,7 @@
                         <div class="swiper-slide">
                            <div class="tp-product-item-2 mb-40">
                               <div class="tp-product-thumb-2 p-relative z-index-1 fix w-img">
-                                 <a href="product.html?id=related-3">
+                                 <a href="product.html?id=3">
                                     <img src="assets/img/products/3.png" alt="">
                                  </a>
                                  <div class="tp-product-badge-hover">
@@ -346,7 +347,7 @@
                                     <a href="#">بناتي</a>
                                  </div>
                                  <h3 class="tp-product-title-2">
-                                    <a href="product.html?id=related-3">مخور بناتي</a>
+                                    <a href="product.html?id=3">مخور بناتي</a>
                                  </h3>
                                  <div class="tp-product-price-wrapper-2">
                                     <span class="tp-product-price-2 new-price">180 <span>ر.ق</span></span>
@@ -359,7 +360,7 @@
                         <div class="swiper-slide">
                            <div class="tp-product-item-2 mb-40">
                               <div class="tp-product-thumb-2 p-relative z-index-1 fix w-img">
-                                 <a href="product.html?id=related-4">
+                                 <a href="product.html?id=4">
                                     <img src="assets/img/products/4.png" alt="">
                                  </a>
                                  <div class="tp-product-badge-hover">
@@ -382,7 +383,7 @@
                                     <a href="#">مناسبات</a>
                                  </div>
                                  <h3 class="tp-product-title-2">
-                                    <a href="product.html?id=related-4">جلابية فاخرة</a>
+                                    <a href="product.html?id=4">جلابية فاخرة</a>
                                  </h3>
                                  <div class="tp-product-price-wrapper-2">
                                     <span class="tp-product-price-2 new-price">480 <span>ر.ق</span></span>
@@ -395,7 +396,7 @@
                         <div class="swiper-slide">
                            <div class="tp-product-item-2 mb-40">
                               <div class="tp-product-thumb-2 p-relative z-index-1 fix w-img">
-                                 <a href="product.html?id=related-5">
+                                 <a href="product.html?id=5">
                                     <img src="assets/img/products/5.png" alt="">
                                  </a>
                                  <div class="tp-product-badge-hover">
@@ -418,7 +419,7 @@
                                     <a href="#">رجالي</a>
                                  </div>
                                  <h3 class="tp-product-title-2">
-                                    <a href="product.html?id=related-5">جلابية رجالي</a>
+                                    <a href="product.html?id=5">جلابية رجالي</a>
                                  </h3>
                                  <div class="tp-product-price-wrapper-2">
                                     <span class="tp-product-price-2 new-price">180 <span>ر.ق</span></span>
@@ -431,7 +432,7 @@
                         <div class="swiper-slide">
                            <div class="tp-product-item-2 mb-40">
                               <div class="tp-product-thumb-2 p-relative z-index-1 fix w-img">
-                                 <a href="product.html?id=related-6">
+                                 <a href="product.html?id=6">
                                     <img src="assets/img/products/6.png" alt="">
                                  </a>
                                  <div class="tp-product-badge-hover">
@@ -454,7 +455,7 @@
                                     <a href="#">شيلة</a>
                                  </div>
                                  <h3 class="tp-product-title-2">
-                                    <a href="product.html?id=related-6">طقم شيلة</a>
+                                    <a href="product.html?id=6">طقم شيلة</a>
                                  </h3>
                                  <div class="tp-product-price-wrapper-2">
                                     <span class="tp-product-price-2 new-price">450 <span>ر.ق</span></span>
