--- a/makhawir.html
+++ b/makhawir.html
@@ -86,7 +86,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-xl-3 col-lg-6 col-md-6 col-sm-6">
+                    <div class="col-6 col-md-6 col-lg-6 col-xl-3">
                         <div class="tp-category-item mb-40 text-center">
                             <div class="tp-category-thumb fix mb-20">
                                 <a href="makhawir-products.html?category=silk">
@@ -100,7 +100,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-xl-3 col-lg-6 col-md-6 col-sm-6">
+                    <div class="col-6 col-md-6 col-lg-6 col-xl-3">
                         <div class="tp-category-item mb-40 text-center">
                             <div class="tp-category-thumb fix mb-20">
                                 <a href="makhawir-products.html?category=cotton">
@@ -114,7 +114,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-xl-3 col-lg-6 col-md-6 col-sm-6">
+                    <div class="col-6 col-md-6 col-lg-6 col-xl-3">
                         <div class="tp-category-item mb-40 text-center">
                             <div class="tp-category-thumb fix mb-20">
                                 <a href="makhawir-products.html?category=girls">
@@ -128,7 +128,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-xl-3 col-lg-6 col-md-6 col-sm-6">
+                    <div class="col-6 col-md-6 col-lg-6 col-xl-3">
                         <div class="tp-category-item mb-40 text-center">
                             <div class="tp-category-thumb fix mb-20">
                                 <a href="makhawir-products.html?category=sheila">
