--- a/about.html
+++ b/about.html
@@ -21,6 +21,7 @@
    <link rel="stylesheet" href="assets/css/flaticon_shofy.css">
    <link rel="stylesheet" href="assets/css/spacing.css">
    <link rel="stylesheet" href="assets/css/hero-slider.css">
+   <link rel="stylesheet" href="assets/css/scroll-animations.css">
    <link rel="stylesheet" href="assets/css/main.css">
    <link rel="stylesheet" href="assets/css/rtl-custom.css">
 </head>
@@ -38,7 +39,7 @@
 
    <main>
       <!-- about area start -->
-      <section class="tp-about-area pb-80 pt-95">
+      <section class="tp-about-area pb-80 pt-95 scroll-animate">
          <div class="container">
             <div class="row">
                <div class="col-xl-8 col-lg-10">
@@ -64,7 +65,7 @@
 
 
       <!-- history area start -->
-      <section class="tp-history-area pt-140 pb-140"
+      <section class="tp-history-area pt-140 pb-140 scroll-animate"
          style="background-color: var(--tp-theme-primary) !important; position: relative;">
          <!-- Flying side images -->
          <div class="ghain-hero-side-images">
@@ -123,7 +124,7 @@
       <!-- history area end -->
 
       <!-- quote card section start -->
-      <section class="tp-quote-card-area pt-80 pb-80">
+      <section class="tp-quote-card-area pt-80 pb-80 scroll-animate">
          <div class="container">
             <div class="row justify-content-center">
                <div class="col-xl-8 col-lg-10">
@@ -146,7 +147,7 @@
       <!-- quote card section end -->
 
       <!-- work area start -->
-      <section class="tp-work-area pt-115 pb-120">
+      <section class="tp-work-area pt-115 pb-120 scroll-animate">
          <div class="container">
             <div class="row justify-content-center">
                <div class="col-xl-6">
@@ -301,6 +302,7 @@
    <script src="assets/js/isotope-pkgd.js"></script>
    <script src="assets/js/imagesloaded-pkgd.js"></script>
    <script src="assets/js/ajax-form.js"></script>
+   <script src="assets/js/scroll-animations.js"></script>
    <script src="assets/js/load-layout.js"></script>
 </body>
 
