Mobile responsive fixes: reduced spacing, card heights, and 2-column layout
- Created mobile-fixes.css for comprehensive mobile optimizations
- Fixed excessive white space between headers on mobile (200px → 100px)
- Reduced category card image heights on mobile (300px → 220px)
- Added 2-column layout for jalabiyas.html cards on phone screens
- Applied fixes to: about.html, shop.html, makhawir.html, jalabiyas.html, and product pages
- Improved mobile user experience across all pages

--- a/about.html
+++ b/about.html
@@ -24,6 +24,7 @@
    <link rel="stylesheet" href="assets/css/scroll-animations.css">
    <link rel="stylesheet" href="assets/css/main.css">
    <link rel="stylesheet" href="assets/css/rtl-custom.css">
+   <link rel="stylesheet" href="assets/css/mobile-fixes.css">
 </head>
 
 <body>
