--- a/jalabiyas-products.html
+++ b/jalabiyas-products.html
@@ -22,6 +22,7 @@
    <link rel="stylesheet" href="assets/css/spacing.css">
    <link rel="stylesheet" href="assets/css/main.css">
    <link rel="stylesheet" href="assets/css/rtl-custom.css">
+   <link rel="stylesheet" href="assets/css/mobile-fixes.css">
 </head>
 
 <body>
