--- a/jalabiyas.html
+++ b/jalabiyas.html
@@ -22,6 +22,7 @@
    <link rel="stylesheet" href="assets/css/spacing.css">
    <link rel="stylesheet" href="assets/css/main.css">
    <link rel="stylesheet" href="assets/css/rtl-custom.css">
+   <link rel="stylesheet" href="assets/css/mobile-fixes.css">
    <style>
       h3,
       .tp-category-title a {
@@ -86,7 +87,7 @@
                </div>
             </div>
             <div class="row justify-content-center">
-               <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6">
+               <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-6">
                   <div class="tp-category-item mb-40 text-center">
                      <div class="tp-category-thumb fix mb-20">
                         <a href="jalabiyas-products.html?category=quiet">
@@ -101,7 +102,7 @@
                      </div>
                   </div>
                </div>
-               <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6">
+               <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-6">
                   <div class="tp-category-item mb-40 text-center">
                      <div class="tp-category-thumb fix mb-20">
                         <a href="jalabiyas-products.html?category=modern">
