Update project: UI fixes, image replacements, and cleanup

--- a/about.html
+++ b/about.html
@@ -53,8 +53,13 @@
             </div>
             <div class="row">
                <div class="col-xl-12">
-                  <div class="tp-about-banner-thumb w-img">
-                     <img src="assets/img/products/12.png" alt="">
+                  <div class="tp-about-banner-thumb w-img"
+                     style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden;">
+                     <iframe id="about-hero-video"
+                        style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"
+                        src="https://www.youtube.com/embed/kvL2_gZnNmk?start=13&end=30&autoplay=1&mute=1&loop=1&playlist=kvL2_gZnNmk&controls=0&showinfo=0&rel=0&modestbranding=1"
+                        frameborder="0" allow="autoplay; encrypted-media" allowfullscreen>
+                     </iframe>
                   </div>
                </div>
             </div>
