--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             player = new YT.Player('hero-video-player', {
                height: '100%',
                width: '100%',
-               videoId: 'kvL2_gZnNmk',
+               videoId: 'JSJRRm2XEG8',
                playerVars: {
                   'autoplay': 1,
                   'mute': 1,
@@ -69,10 +69,10 @@
                   'showinfo': 0,
                   'rel': 0,
                   'modestbranding': 1,
-                  'start': 13,
+                  'start': 7,
                   'enablejsapi': 1,
                   'loop': 1,
-                  'playlist': 'kvL2_gZnNmk'
+                  'playlist': 'JSJRRm2XEG8'
                },
                events: {
                   'onReady': onPlayerReady,
@@ -86,13 +86,13 @@
          }
 
          function onPlayerStateChange(event) {
-            // Check current time and loop between 13-30 seconds
+            // Check current time and loop between 7-19 seconds
             if (event.data == YT.PlayerState.PLAYING) {
                var checkTime = setInterval(function () {
                   if (player && player.getCurrentTime) {
                      var currentTime = player.getCurrentTime();
-                     if (currentTime >= 30) {
-                        player.seekTo(13);
+                     if (currentTime >= 19) {
+                        player.seekTo(7);
                      }
                   }
                }, 100); // Check every 100ms
@@ -109,7 +109,7 @@
 
 
       <!-- category area start -->
-      <section class="tp-category-area pb-95 pt-95 scroll-animate">
+      <section class="tp-category-area pb-50 pt-50 scroll-animate">
          <div class="container">
             <div class="row">
                <div class="col-xl-12">
@@ -199,7 +199,7 @@
                               <div class="tp-product-item-2 mb-40">
                                  <div class="tp-product-thumb-2 p-relative z-index-1 fix w-img">
                                     <a href="product.html?id=makhour-luxury-1">
-                                       <img src="assets/img/products/4.png" alt="">
+                                       <img src="assets/img/products/1.png" alt="">
                                     </a>
                                     <div class="tp-product-badge-hover">
                                        <span>الأكثر رواجاً</span>
@@ -232,7 +232,7 @@
                               <div class="tp-product-item-2 mb-40">
                                  <div class="tp-product-thumb-2 p-relative z-index-1 fix w-img">
                                     <a href="product.html?id=makhour-luxury-1">
-                                       <img src="assets/img/products/5.png" alt="">
+                                       <img src="assets/img/products/2.png" alt="">
                                     </a>
                                     <div class="tp-product-badge-hover">
                                        <span>الأكثر رواجاً</span>
@@ -309,7 +309,7 @@
       <!-- Makhawir Sections Start -->
 
       <!-- 1. Silk Makhawir Section -->
-      <section class="tp-product-area pb-50 scroll-animate-left">
+      <section class="tp-product-area pb-30 scroll-animate-left">
          <div class="container">
             <div class="row">
                <div class="col-xl-12">
@@ -504,7 +504,7 @@
       </section>
 
       <!-- 2. Cotton Makhawir Section -->
-      <section class="tp-product-area pb-50 scroll-animate-right">
+      <section class="tp-product-area pb-30 scroll-animate-right">
          <div class="container">
             <div class="row">
                <div class="col-xl-12">
@@ -699,7 +699,7 @@
       </section>
 
       <!-- 3. Girls Makhawir Section -->
-      <section class="tp-product-area pb-50 scroll-animate">
+      <section class="tp-product-area pb-30 scroll-animate">
          <div class="container">
             <div class="row">
                <div class="col-xl-12">
@@ -894,7 +894,7 @@
       </section>
 
       <!-- 4. Makhour & Sheila Section -->
-      <section class="tp-product-area pb-90 scroll-animate" id="makhawir-section">
+      <section class="tp-product-area pb-30 scroll-animate" id="makhawir-section">
          <div class="container">
             <div class="row">
                <div class="col-xl-12">
@@ -913,7 +913,7 @@
                               <div class="tp-product-item-2 mb-40">
                                  <div class="tp-product-thumb-2 p-relative z-index-1 fix w-img">
                                     <a href="product.html?id=makhour-sheila-1">
-                                       <img src="assets/img/products/6.png" alt="">
+                                       <img src="assets/img/products/1.png" alt="">
                                     </a>
                                     <div class="tp-product-badge-hover">
                                        <span>مخاوير غين.</span>
@@ -947,7 +947,7 @@
                               <div class="tp-product-item-2 mb-40">
                                  <div class="tp-product-thumb-2 p-relative z-index-1 fix w-img">
                                     <a href="product.html?id=makhour-sheila-1">
-                                       <img src="assets/img/products/6.png" alt="">
+                                       <img src="assets/img/products/2.png" alt="">
                                     </a>
                                     <div class="tp-product-badge-hover">
                                        <span>مخاوير غين.</span>
@@ -981,7 +981,7 @@
                               <div class="tp-product-item-2 mb-40">
                                  <div class="tp-product-thumb-2 p-relative z-index-1 fix w-img">
                                     <a href="product.html?id=makhour-sheila-1">
-                                       <img src="assets/img/products/6.png" alt="">
+                                       <img src="assets/img/products/3.png" alt="">
                                     </a>
                                     <div class="tp-product-badge-hover">
                                        <span>مخاوير غين.</span>
@@ -1015,7 +1015,7 @@
                               <div class="tp-product-item-2 mb-40">
                                  <div class="tp-product-thumb-2 p-relative z-index-1 fix w-img">
                                     <a href="product.html?id=makhour-sheila-1">
-                                       <img src="assets/img/products/6.png" alt="">
+                                       <img src="assets/img/products/1.png" alt="">
                                     </a>
                                     <div class="tp-product-badge-hover">
                                        <span>مخاوير غين.</span>
@@ -1049,7 +1049,7 @@
                               <div class="tp-product-item-2 mb-40">
                                  <div class="tp-product-thumb-2 p-relative z-index-1 fix w-img">
                                     <a href="product.html?id=makhour-sheila-1">
-                                       <img src="assets/img/products/6.png" alt="">
+                                       <img src="assets/img/products/2.png" alt="">
                                     </a>
                                     <div class="tp-product-badge-hover">
                                        <span>مخاوير غين.</span>
@@ -1092,7 +1092,7 @@
       <!-- Jalabiya Sections Start -->
 
       <!-- 1. Quiet Elegance Section -->
-      <section class="tp-product-area pb-50 pt-50 scroll-animate">
+      <section class="tp-product-area pb-30 pt-30 scroll-animate">
          <div class="container">
             <div class="row">
                <div class="col-xl-12">
@@ -1112,7 +1112,7 @@
                               <div class="tp-product-item-2 mb-40">
                                  <div class="tp-product-thumb-2 p-relative z-index-1 fix w-img">
                                     <a href="product.html?id=jalabiya-silk-1">
-                                       <img src="assets/img/products/4.png" alt="">
+                                       <img src="assets/img/products/1.png" alt="">
                                     </a>
                                     <div class="tp-product-badge-hover">
                                        <span>جلابيات غين.</span>
@@ -1147,7 +1147,7 @@
                               <div class="tp-product-item-2 mb-40">
                                  <div class="tp-product-thumb-2 p-relative z-index-1 fix w-img">
                                     <a href="product.html?id=jalabiya-silk-1">
-                                       <img src="assets/img/products/4.png" alt="">
+                                       <img src="assets/img/products/1.png" alt="">
                                     </a>
                                     <div class="tp-product-badge-hover">
                                        <span>جلابيات غين.</span>
@@ -1182,7 +1182,7 @@
                               <div class="tp-product-item-2 mb-40">
                                  <div class="tp-product-thumb-2 p-relative z-index-1 fix w-img">
                                     <a href="product.html?id=jalabiya-silk-1">
-                                       <img src="assets/img/products/4.png" alt="">
+                                       <img src="assets/img/products/1.png" alt="">
                                     </a>
                                     <div class="tp-product-badge-hover">
                                        <span>جلابيات غين.</span>
@@ -1217,7 +1217,7 @@
                               <div class="tp-product-item-2 mb-40">
                                  <div class="tp-product-thumb-2 p-relative z-index-1 fix w-img">
                                     <a href="product.html?id=jalabiya-silk-1">
-                                       <img src="assets/img/products/4.png" alt="">
+                                       <img src="assets/img/products/1.png" alt="">
                                     </a>
                                     <div class="tp-product-badge-hover">
                                        <span>جلابيات غين.</span>
@@ -1257,7 +1257,7 @@
       </section>
 
       <!-- 2. Modern Cuts Section -->
-      <section class="tp-product-area pb-50 pt-50 scroll-animate">
+      <section class="tp-product-area pb-30 pt-30 scroll-animate">
          <div class="container">
             <div class="row">
                <div class="col-xl-12">
@@ -1277,7 +1277,7 @@
                               <div class="tp-product-item-2 mb-40">
                                  <div class="tp-product-thumb-2 p-relative z-index-1 fix w-img">
                                     <a href="product.html?id=jalabiya-modern-1">
-                                       <img src="assets/img/products/5.png" alt="">
+                                       <img src="assets/img/products/2.png" alt="">
                                     </a>
                                     <div class="tp-product-badge-hover">
                                        <span>جلابيات غين.</span>
@@ -1312,7 +1312,7 @@
                               <div class="tp-product-item-2 mb-40">
                                  <div class="tp-product-thumb-2 p-relative z-index-1 fix w-img">
                                     <a href="product.html?id=jalabiya-modern-1">
-                                       <img src="assets/img/products/5.png" alt="">
+                                       <img src="assets/img/products/2.png" alt="">
                                     </a>
                                     <div class="tp-product-badge-hover">
                                        <span>جلابيات غين.</span>
@@ -1347,7 +1347,7 @@
                               <div class="tp-product-item-2 mb-40">
                                  <div class="tp-product-thumb-2 p-relative z-index-1 fix w-img">
                                     <a href="product.html?id=jalabiya-modern-1">
-                                       <img src="assets/img/products/5.png" alt="">
+                                       <img src="assets/img/products/2.png" alt="">
                                     </a>
                                     <div class="tp-product-badge-hover">
                                        <span>جلابيات غين.</span>
@@ -1382,7 +1382,7 @@
                               <div class="tp-product-item-2 mb-40">
                                  <div class="tp-product-thumb-2 p-relative z-index-1 fix w-img">
                                     <a href="product.html?id=jalabiya-modern-1">
-                                       <img src="assets/img/products/5.png" alt="">
+                                       <img src="assets/img/products/2.png" alt="">
                                     </a>
                                     <div class="tp-product-badge-hover">
                                        <span>جلابيات غين.</span>
@@ -1440,7 +1440,7 @@
 
 
       <!-- testimonial area start -->
-      <section class="tp-testimonial-area grey-bg-7 pt-130 pb-135 scroll-animate">
+      <section class="tp-testimonial-area grey-bg-7 pt-80 pb-80 scroll-animate">
          <div class="container">
             <div class="row justify-content-center">
                <div class="col-xl-12">
