--- a/register.html
+++ b/register.html
@@ -22,6 +22,15 @@
    <link rel="stylesheet" href="assets/css/spacing.css">
    <link rel="stylesheet" href="assets/css/main.css">
    <link rel="stylesheet" href="assets/css/rtl-custom.css">
+   <style>
+      img {
+         display: none !important;
+      }
+
+      .breadcrumb__area {
+         background-image: none !important;
+      }
+   </style>
 </head>
 
 <body>
